--- a/secure-version/frontend/pages/login.html
+++ b/secure-version/frontend/pages/login.html
@@ -13,10 +13,12 @@
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" id="username" placeholder="Enter your username">
+                    <small class="error" id="usernameError"></small>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
                     <input type="password" id="password" placeholder="Enter your password">
+                    <small class="error" id="passwordError"></small>
                 </div>
                 <button type="submit" class="login-btn">Sign In</button>
                 <div class="extra-links">
@@ -26,6 +28,6 @@
                 </div>
             </form>
         </main>
-        <script src="../js/auth.js"></script>
+        <script src="../js/login.js"></script>
     </body>
 </html>
