--- a/secure-version/frontend/pages/dashboard.html
+++ b/secure-version/frontend/pages/dashboard.html
@@ -1,9 +1,16 @@
-<!Doctype html>
-<html>
-    <head>
-        <title>Dashboard page</title>
-    </head>
-    <body>
-        <p>Welcome to dashboard</p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="../css/dashboard.css">
+</head>
+<body>
+    <main class="dashboard-container">
+        <h1>Welcome, <span id="username"></span>!</h1>
+        <button id="logoutBtn">Logout</button>
+    </main>
+    <script src="../js/dashboard.js"></script>
+</body>
 </html>
