--- a/secure-version/frontend/pages/signup.html
+++ b/secure-version/frontend/pages/signup.html
@@ -8,11 +8,11 @@
 <body>
     <main class="signup-container">
         <h2>Create Account</h2>
-        <form id="singupForm" novalidate>
+        <form id="signup-form" novalidate>
             <div class="form-group">
                 <label for="name">Full Name</label>
-                <input type="text" id="name"    placeholder="Enter your full name" required>
-                <small class="error" id="nameError"></small>
+                <input type="text" id="fullname" placeholder="Enter your full name" required>
+                <small class="error" id="fullNameError"></small>
             </div>
             <div class="form-group">
                 <label for="username">Username</label>
@@ -26,14 +26,15 @@
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" placeholder="*******" required>
+                <input type="password" id="password" placeholder="*********" required>
                 <small class="error" id="passwordError"></small>
             </div>
             <div class="form-group">
                 <label for="confirmPassword">Confirm Password</label>
-                <input type="password" id="confirmPassword" placeholder="*******" required>
+                <input type="password" id="confirmPassword" placeholder="*********" required>
                 <small class="error" id="confirmPasswordError"></small>
             </div>
+            <div id="signupError" class="error"></div>
             <button type="submit" class="btn">Sign Up</button>
             <div class="extra-links">
                 <p class="switch">
